tests/NormalTests/paczka1/small_fuzzy/73294519.err
Error in line 8: Clw An49 40,7
Error in line 4: pOSmxh S928 55,1
